include suggestions raised during code review
added links to Twilio Java Helper Library, Spring Boor MVC Getting
Started and fix small typo.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ API</a> and creating TwiML call logic using the
 <ul>
 <li><a href="//www.twilio.com/docs/api/rest">Twilio REST API</a></li>
 <li><a href="//www.twilio.com/docs/api/twiml/say">TwiML Say Verb</a></li>
+<li><a href="//www.twilio.com/docs/java/install">Twilio Java Helper Library</a></li>
+<li><a href="//spring.io/guides/gs/serving-web-content/">Spring Boot MVC Getting Started</a></li>
 </ul>
 </div><div data-title="Environment" data-file=".env.example" class="step"><h2 id="environment">Environment</h2>
 <p>To create our click-to-call application, we&#39;ll first need to setup our environment.</p>
@@ -64,7 +66,7 @@ code shows one way you could implement this functionality using <a href="http://
 <li>Submits that form data to our controller</li>
 <li>Let&#39;s the user know if the submission was successful or not</li>
 </ul>
-<p>This is a pretty common implementation of jQuery&#39;s $.ajax() method, but notice that we are
+<p>This is a pretty common implementation of jQuery&#39;s <code>$.ajax()</code> method, but notice that we are
 returning the response message when the call has connected.</p>
 <p>Now that we have the front-end done, let&#39;s build the backend that will receive this data and
 call the user.</p>
@@ -104,11 +106,11 @@ will say something.</p>
 support agent.</p>
 <p>If you&#39;re a Java developer working with Twilio, you might enjoy these
 other tutorials:</p>
-<p><a href="//www.twilio.com/docs/howto/walkthrough/automated-survey/java/spark"><strong>Automated Survey</strong></a></p>
+<p><a href="//https://www.twilio.com/docs/tutorials/walkthrough/automated-survey/java/spring"><strong>Automated Survey</strong></a></p>
 <p>Instantly collect structured data from your users with a survey
 conducted over a voice call or SMS text messages. Learn how to create
 your own survey in Java.</p>
-<p><a href="//www.twilio.com/docs/howto/walkthrough/server-notifications/java/spark"><strong>SMS and MMS Notifications</strong></a></p>
+<p><a href="//https://www.twilio.com/docs/tutorials/walkthrough/server-notifications/java/spring"><strong>SMS and MMS Notifications</strong></a></p>
 <p>Send SMS alerts to a list of system administrators if something goes wrong on your server.</p>
 <h3 id="did-this-help-">Did this help?</h3>
 <p>Thanks for checking out this tutorial! If you have any feedback to share
