Remove user's name reference

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ purposes of this tutorial we&#39;ll place them as environment variables that our
 readme file</a>.</p>
 </div><div data-title="The Web Form" data-file="src/main/resources/templates/index.html" data-highlight="26-40" class="step"><h2 id="the-web-form">The Web Form</h2>
 <p>The first step on creating a real click-to-call solution is by building the form that your
-user needs to fill on the web. No need to overthink this, the real goal is to POST the User&#39;s name
-and phone number to your controller.</p>
+user needs to fill on the web. No need to overthink this, the real goal is to POST the User&#39;s
+phone number to your controller.</p>
 <p>So what information does this form need? An input for the phone number and
 a submit button. Since the page doesn&#39;t need to render new content after clicking
 on submit, we decided to implement the POST action via Ajax using jQuery.
